# CodeSnippets

./: .gitignore  .gitmodules  README.md
nix_play/: foo.nix  shell.nix
nix_play/flake/: nixpack.sh  shell.nix
nix_play/flake/few/: Cargo.toml
nix_play/flake/flake/: flake.nix
nix_play/new_proj/: flake.nix  foo.nix  meta.nix  shell.nix
prompt_evals/: .env.template  eval_inference.sh
python_play/: .gitignore
python_play/proj/: .gitignore  ChainMap.py  LRU.py  bisect_ex.py  brieftour2.py  candy.py  classes.py  dq.py  filereadwrite.py  filter.py  gas.py  generators.py  heapsort.py  linkedlist.py  looping.py  lru.py  main.py  matrix.py  os.py  other.py  prod_array.py  pyvenv.cfg  sets.py  substr.py  swapstrings.py  to-uninstall.txt
python_play/secret_sharing/: .gitignore  encryption.py  encryption_test.py  pyvenv.cfg  requirements.txt  ss.py  ss_test.py  todo.txt
rust/: classroom-contract
rust/bar/src/: main.rs
rust/bch/: Cargo.toml
rust/bch/src/: main.rs
rust/bfsprint/: Cargo.toml
rust/bfsprint/src/: main.rs
rust/borsh/: Cargo.toml
rust/borsh/src/: main.rs
rust/boxtest/: Cargo.toml
rust/boxtest/src/: main.rs
rust/bzws/: WORKSPACE.bazel
rust/bzws/bazel/: BUILD.bazel
rust/doublyll/: Cargo.toml
rust/ecfix/: Cargo.toml
rust/ecfix/src/: main.rs
rust/ectest/: Cargo.toml
rust/ectest/src/: main.rs
rust/eigenda-rust-2/: .gitignore
rust/escda/: Cargo.toml
rust/escda/src/: main.rs
rust/ethaddress/: Cargo.toml
rust/ethaddress/src/: main.rs
rust/etherrs/: Cargo.toml  build.rs
rust/etherrs/abigenmacros/: Cargo.toml
rust/etherrs/abigenmacros/src/: lib.rs
rust/etherrs/src/: main.rs
rust/etherrs2/: Cargo.toml  build.rs.old  package-lock.json
rust/etherrs2/contracts/: NordSCMock.sol
rust/etherrs2/examples/: simpleStorage.sol
rust/etherrs2/src/: main.old.rs  main.rs
rust/foo/: Cargo.toml
rust/foo/featureflag/: Cargo.toml
rust/foo/featureflag/src/: lib.rs
rust/foo/src/: main.rs
rust/foo1/host/: Cargo.toml
rust/generics/src/: main.rs
rust/governort/: Cargo.toml
rust/governort/src/: main.rs
rust/iterdf/: Cargo.toml
rust/iterdf/src/: main.rs
rust/ll/src/: main.rs
rust/lru/src/: lib.rs  main.rs
rust/macrogen/: Cargo.toml
rust/macrogen/src/: main.rs
rust/metrics/: Cargo.toml
rust/metrics/src/: lib.rs  main.rs
rust/pathmacro/: Cargo.toml
rust/pathmacro/src/: main.rs
rust/protocdd/: Cargo.toml  build.rs
rust/protocdd/src/: build.rs  main.rs
rust/quic-rs-debug/src/: main.rs
rust/ratelimiter_api/: Cargo.toml
rust/redbfoo/: Cargo.toml
rust/redbfoo/src/: lib.rs  main.rs  morestina.rs  tableleakbug.rs
rust/revrange/: Cargo.toml
rust/revrange/src/: main.rs
rust/secretsharing/: Cargo.toml
rust/secretsharing/src/: main.rs
rust/serdeborsch/: Cargo.toml
rust/sigbench/: Cargo.toml
rust/sigbench/benches/: bls.rs
rust/sigbench/src/: main.rs
rust/uninit/: Cargo.toml
rust/uninit/src/: main.rs
