[package]
name = "bch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "0.10.3", features = ["rc"] }
serde = { version = "1.0.188", features = ["derive", "rc"] }
time = { version = "0.3.29", features = ["serde"] }
