[package]
name = "etherrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.11", features = ["solc", "solc-full"] }
eyre = "0.6.11"
hex = "0.4.3"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

[build-dependencies]
ethers = { version = "2.0.11", features = ["solc"] }
eyre = "0.6.11"
