[package]
name = "governort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
governor = "0.6.0"
nonzero_ext = "0.3.0"
tokio = { version = "1.35.1", features = ["full"] }
