[package]
name = "protocdd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.10.2"



[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
prost = "0.12.3"
tokio = { version = "1.34.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["gzip", "tls", "tls-roots", "tls-roots-common", "tls-webpki-roots"] }

