load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

DEPENDENCIES = [
    # Keep sorted.
    "@crate_index//:hex",
    "@crate_index//:num-integer",
    "@crate_index//:prometheus",
    "@crate_index//:rand_0_8_4",
    "@crate_index//:rand_chacha_0_3_1",
    "@crate_index//:rayon",
    "@crate_index//:slog",
    "@crate_index//:strum",
]

DEV_DEPENDENCIES = [
    # Keep sorted.
    "@crate_index//:assert_matches",
    "@crate_index//:criterion",
    "@crate_index//:mockall_0_7_2",
    "@crate_index//:proptest",
    "@crate_index//:prost",
    "@crate_index//:serde_cbor",
    "@crate_index//:slog-async",
    "@crate_index//:slog-envlogger",
    "@crate_index//:slog-term",
    "@crate_index//:tempfile",
]

rust_library(
    name = "bazel",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "bazel",
    version = "0.8.0",
    deps = DEPENDENCIES,
)
