[package]
name = "abigenmacros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.76"
quote = "1.0.35"
r3bl_rs_utils = "0.9.15"
syn = { version = "2.0.48", features = ["extra-traits"] }


[lib]
proc-macro = true
